testdata/routing/multiport/multiport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: service-unsecure
  name: service-unsecure
spec:
  ports:
  - name: http
    port: 27017
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 27443
    protocol: TCP
    targetPort: 8080
  selector:
    name: web-server
